--- a/index.html
+++ b/index.html
@@ -41,5 +41,9 @@
 <input style="width: 510px" type="text" id="privateKey" placeholder="Enter an old SWIFT private key" />
 <input type="button" id="butPrivkey" value="Convert Private Key" onclick="convertPrivkey();" />
 
+<br/><br/>
+
+<p>Download from <a href="https://github.com/swiftcashproject/old">Github</a></p>
+
 </body>
 </html>
